# nexa-connect-exaa

./: CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude/commands/: checks.md  pr.md  release.md
.github/workflows/: ci.yml  publish.yml
src/nexa_connect_exaa/: __init__.py  _http.py  auth.py  client.py  config.py  exceptions.py  pandas_helpers.py  polling.py  testing.py
src/nexa_connect_exaa/endpoints/: __init__.py  auctions.py  orders.py  posttrading.py  results.py
src/nexa_connect_exaa/models/: __init__.py  auction.py  common.py  orders.py  posttrading.py  results.py
tests/: conftest.py  test_auth.py  test_client.py  test_endpoints.py  test_exceptions.py  test_http.py  test_models.py  test_pandas.py  test_polling.py  test_posttrading.py  test_sync_endpoints.py
